# labour-mapit

./: .gitignore  .gitmodules  LICENSE.txt  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: default.yml
admin/: admin.py  apps.py
conf/: general.yml-example
labour_project/: settings.py  urls.py  utils.py  wsgi.py
mapit_labour/: admin.py  apps.py  forms.py  importers.py  middleware.py  models.py  urls.py  views.py
mapit_labour/fixtures/: labour_types.json  test_areas.json
mapit_labour/management/commands/: mapit_labour_import_addressbase_core.py  mapit_labour_import_branches.py
mapit_labour/migrations/: 0001_initial.py  0002_alter_uprn_location.py  0002_apikey.py  0002_auto_20211203_2038.py  0003_alter_uprn_location.py  0003_apikey.py  0003_auto_20211203_2300.py  0004_auto_20211213_2234.py  0005_csvimporttaskprogress.py  0006_alter_csvimporttaskprogress_task_id.py
mapit_labour/templates/gis/admin/: osm_https.html  osm_https.js
mapit_labour/templates/mapit/: base.html  header.html  intro.html
mapit_labour/templates/mapit_labour/: branches_upload.html  branches_upload_task.html  import_csv.html  import_csv_status.html  uprn.html  uprns.html
mapit_labour/tests/: test_admin.py  test_management_commands.py  test_models.py  test_views.py  utils.py
mapit_labour/tests/branch_csv_importer/: skeletons.py  test_cli.py  test_core.py
mapit_labour/tests/fixtures/: addressbase-core-incremental.csv  addressbase-core-tiny.csv  addressbase-core-update.csv
script/: bootstrap  server  setup  test  update
static/mapit_labour/css/: mapit_labour.css
