[tool.black]
force-exclude = '''/(
    migrations
  | labour_project
)/'''

[tool.poetry]
name = "labour-mapit"
version = "0.0.1"
description = ""
authors = ["mySociety"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.2.7"
django-login-required-middleware = "^0.9.0"
django-mapit = {git = "https://github.com/mysociety/mapit", branch = "master"}
django-q = "^1.3.9"
django-crispy-forms = "^2.1"
crispy-forms-gds = "^0.2.4"
pymemcache = "^4.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
django-debug-toolbar = "^3.2.2"
coverage = "^6.2"
pudb = "^2022.1.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
